[project]
name = "bible-quiz-app"
version = "0.1.0"
description = "Bible Quiz App"
authors = [
    {name = "Ayodeji",email = "dejiowoeye@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

